[tool.poetry]
name = "deezer-tracklists"
version = "0.1.0"
description = "Copy 1001tracklists tracklists to deezer playlists"
authors = ["Harry Cooper <harry.coop99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
starlette = "^0.18.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
